react-hook-form applied

--- a/react-ts/package.json
+++ b/react-ts/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mongoose": "^8.0.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
     "sort-by": "^0.0.2"
@@ -27,6 +33,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "nodemon": "^3.0.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
