--- a/react-ts/package.json
+++ b/react-ts/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mongoose": "^8.0.4",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
@@ -22,7 +23,9 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
-    "sort-by": "^0.0.2"
+    "sharp": "^0.33.2",
+    "sort-by": "^0.0.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
