--- a/react-ts/package.json
+++ b/react-ts/package.json
@@ -11,9 +11,11 @@
     "dev": "concurrently \"npm run start\" \"vite\""
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "helmet": "^7.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mongoose": "^8.0.4",
@@ -40,7 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "nodemon": "^3.1.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.5",
     "vite": "^5.0.8"
   }
 }
