--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
-command = “npm run build”
-publish = “/build”
-base = “/”
-
+  command = "npm run build"
+  publish = "dist"
+  
 [[redirects]]
   from = "/*"
   to = "/index.html"
