--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,9 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+  [[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "https://link-sharing-app-elfabri.netlify.app"
+    Access-Control-Allow-Credentials = "true"
