--- a/netlify.toml
+++ b/netlify.toml
@@ -10,5 +10,8 @@
   [[headers]]
   for = "/*"
   [headers.values]
-    Access-Control-Allow-Origin = "https://link-sharing-app-elfabri.netlify.app"
+    Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Credentials = "true"
+    X-Content-Type-Options = "nosniff"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
