--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "build": "tsc && vite build --mode production",
+    "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview --mode production",
     "start": "nodemon server/server.js",
-    "dev": "concurrently \"npm run start\" \"vite\""
+    "dev": "concurrently \"npm run start\" \"vite --mode development\""
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
