--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc && vite build --mode production",
+    "build": "NODE_ENV=production tsc && vite build --mode production",
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --mode production",
-    "start": "nodemon server/server.js",
-    "dev": "concurrently \"npm run start\" \"vite --mode development\""
+    "preview": "NODE_ENV=production vite preview --mode production",
+    "start": "NODE_ENV=production nodemon --exec 'node -r dotenv/config' server/server.js",
+    "dev": "concurrently \"NODE_ENV=development nodemon --exec 'node -r dotenv/config' server/server.js\" \"vite --mode development\""
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
