--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
 [build]
   command = "npm run build"
   publish = "dist"
+
+[[redirects]]
+from = "/api/*"
+to = "https://backend.link-sharing-app-elfabri.netlify.app/"
+status = 200
   
 [[redirects]]
   from = "/*"
@@ -10,7 +15,7 @@
 [[headers]]
 for = "/*"
 [headers.values]
-  Access-Control-Allow-Origin = "*"
+  Access-Control-Allow-Origin = "http://localhost:3302"
   Access-Control-Allow-Credentials = "true"
   X-Content-Type-Options = "nosniff"
   X-Frame-Options = "DENY"
