--- a/netlify.toml
+++ b/netlify.toml
@@ -4,8 +4,8 @@
 
 [[redirects]]
 from = "/api/*"
-to = "https://backend.link-sharing-app-elfabri.netlify.app/"
-status = 200
+to = "https://backend.link-sharing-app-elfabri.netlify.app/:splat"
+status = 200!
   
 [[redirects]]
   from = "/*"
