--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,8 @@
 [[redirects]]
 from = "/api/*"
 to = "https://backend.link-sharing-app-elfabri.netlify.app/"
-status = 200!
+status = 200
+force = true
   
 [[redirects]]
   from = "/*"
