--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,9 @@
   publish = "dist"
 
 [[redirects]]
-from = "/*"
-to = "https://backend.link-sharing-app-elfabri.netlify.app/:splat"
-status = 200
-force = true
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[headers]]
 for = "/*"
