--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "NODE_ENV=production ./node_modules/.bin/tsc && vite build --mode production",
+    "build": "NODE_ENV=production npx tsc && vite build --mode production",
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "NODE_ENV=production vite preview --mode production",
     "start": "NODE_ENV=production nodemon --exec 'node -r dotenv/config' server/server.js",
