--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,12 @@
 [build]
-  command = "tsc && vite build"
+  command = "npm run build"
   publish = "dist"
 
 [build.environment]
   API_URL = "https://backend.link-sharing-app-elfabri.netlify.app/"
 
 [context.production.environment]
+  NODE_VERSION = "16.13.0"
   NODE_ENV = "production"
 
 [context.deploy-preview]
