--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "prebuild": "ls node_modules/.bin",
-    "build": "node ./node_modules/typescript/bin/tsc && vite build",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "NODE_ENV=production vite preview --mode production",
     "start": "NODE_ENV=production nodemon --exec 'node -r dotenv/config' server/server.js",
