--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "serverless-http": "^3.2.0",
     "sharp": "^0.33.3",
     "sort-by": "^0.0.2",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "vite": "^5.2.11"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
@@ -50,7 +51,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
