mongodb connect correction

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,6 @@
+PORT=3301
+ALLOWED_ORIGIN=https://your-production-domain.com
+NODE_ENV=production
 VITE_API_URL=https://backend.link-sharing-app-elfabri.netlify.app/
+SALT_ROUNDS=10
+MONGO_URI=mongodb+srv://fabriziomaffoni:lRLPADPx9PhiX9KT@cluster0.ath8pdx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
