--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,6 @@
+PORT=3301
+ALLOWED_ORIGIN=http://localhost:3302
+NODE_ENV=development
 VITE_API_URL=http://localhost:3301/
+SALT_ROUNDS=10
+MONGO_URI=mongodb+srv://fabriziomaffoni:lRLPADPx9PhiX9KT@cluster0.ath8pdx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
