--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "vite build",
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "NODE_ENV=production vite preview --mode production",
-    "start": "NODE_ENV=production nodemon --exec 'node -r dotenv/config' server/server.js",
-    "dev": "concurrently \"NODE_ENV=development nodemon --exec 'node -r dotenv/config' server/server.js\" \"vite --mode development\""
+    "start": "NODE_ENV=production nodemon --exec 'node -r dotenv/config' api/server.js",
+    "dev": "concurrently \"NODE_ENV=development nodemon --exec 'node -r dotenv/config' api/server.js\" \"vite --mode development\""
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
