--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "dotenv": "^16.4.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.7.3",
+    "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "react": "^18.2.0",
