--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "NODE_ENV=production vite preview --mode production",
     "start": "NODE_ENV=production nodemon --exec 'node -r dotenv/config' api/server.js",
-    "dev": "concurrently \"NODE_ENV=development nodemon --exec 'node -r dotenv/config' api/server.js\" \"vite --mode development\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "dev": "concurrently \"NODE_ENV=development nodemon --exec 'node -r dotenv/config' api/server.js\" \"vite --mode development\""
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
@@ -56,7 +54,6 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "gh-pages": "^6.2.0",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2"
